Refactor code, remove redundant comments, optimize functions
Refactored the code by removing unnecessary comments in BarberShopData, DataFactory, CustomerData, and EmployeeData. Made the "saveBarberShop" method more efficient by using the "DataFactory" instance to create "BarberShopData".